feat(readme, account): list account endpoint
