# account-server/src/Domain/Transaction/Controller/postWithdraw.ts
@@ -35,6 +35,9 @@ const response = {
   200: z.object({
     transactionId: z.string(),
   }),
+  501: z.object({
+    message: z.string(),
+  }),
 } as const;
 
 export const postWithdraw = async (app: FastifyInstance) =>
@@ -70,5 +73,9 @@ export const postWithdraw = async (app: FastifyInstance) =>
 
         return reply.code(200).send({ transactionId });
       }
+
+      return reply.code(501).send({
+        message: `Operation not implemented for type ${body.senderType} from ${body.senderType} to ${body.receiverType}`,
+      });
     },
   });
