# account-server/src/Domain/Transaction/Repository/TransactionRepository.ts
@@ -1,4 +1,5 @@
 import { fetchManyTransactionItems } from "@/Domain/Transaction/Repository/fetchManyTransactionItems";
+import { fetchManyTransactions } from "@/Domain/Transaction/Repository/fetchManyTransactions";
 import { fetchOneTransaction } from "@/Domain/Transaction/Repository/fetchOneTransaction";
 import { insertTransaction } from "@/Domain/Transaction/Repository/insertTransaction";
 
@@ -6,6 +7,7 @@ export const TransactionRepository = () => ({
   insertTransaction,
   fetchOneTransaction,
   fetchManyTransactionItems,
+  fetchManyTransactions,
 });
 
 export type TransactionRepository = ReturnType<typeof TransactionRepository>;
