# account-server/src/Domain/Transaction/Usecase/TransactionUsecase.ts
@@ -2,6 +2,7 @@ import { BalanceRepository } from "@/Domain/Balance/Repository/BalanceRepository
 import { TransactionRepository } from "@/Domain/Transaction/Repository/TransactionRepository";
 import { depositFromAtm } from "@/Domain/Transaction/Usecase/depositFromAtm";
 import { getTransactionDetail } from "@/Domain/Transaction/Usecase/getTransactionDetail";
+import { getTransactions } from "@/Domain/Transaction/Usecase/getTransactions";
 import { withdrawInAtm } from "@/Domain/Transaction/Usecase/withdrawFromAtm";
 
 export const TransactionUsecase = (input: {
@@ -14,6 +15,7 @@ export const TransactionUsecase = (input: {
     input.transactionRepository,
     input.balanceRepository
   ),
+  getTransactions: getTransactions(input.transactionRepository),
 });
 
 export type TransactionUsecase = ReturnType<typeof TransactionUsecase>;
