# account-server/src/Domain/Transaction/Usecase/getTransactions.ts
@@ -1,0 +1,12 @@
+import { TransactionRepository } from "@/Domain/Transaction/Repository/TransactionRepository";
+
+export const getTransactions =
+  (transactionRepository: TransactionRepository) =>
+  async (input: { userId: string }) => {
+    const { userId } = input;
+    const { transactions } = await transactionRepository.fetchManyTransactions({
+      userId,
+    });
+
+    return { transactions };
+  };
